[package]
name = "expenses"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3.0"
chrono = { version = "0.4.24", features = ["serde"] }
crossterm = "0.26.1"
plotters = "0.3.4"
serde = { version = "1.0.158", features = ["derive"] }
serde_yaml = "0.9.19"
